--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -21,44 +21,49 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="Gtq-YN-SVc" customClass="MealTableViewCell" customModule="FoodTracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gtq-YN-SVc" id="uHe-FB-xmn">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gtq-YN-SVc" id="uHe-FB-xmn">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="L4l-UP-NRP">
-                                            <rect key="frame" x="0.0" y="0.0" width="89.5" height="89.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="L4l-UP-NRP" secondAttribute="height" multiplier="1:1" id="hJF-1q-6Ro"/>
-                                            </constraints>
-                                        </imageView>
-                                        <stackView opaque="NO" contentMode="center" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-na-fqg" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
-                                            <rect key="frame" x="105" y="39" width="155" height="31"/>
-                                            <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="size" keyPath="starSize">
-                                                    <size key="value" width="31" height="31"/>
-                                                </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="starCount">
-                                                    <integer key="value" value="5"/>
-                                                </userDefinedRuntimeAttribute>
-                                            </userDefinedRuntimeAttributes>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ejf-RP-vaD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="500" verticalHuggingPriority="500" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="100" placeholderIntrinsicWidth="221" placeholderIntrinsicHeight="200" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="L4l-UP-NRP">
+                                                    <rect key="frame" x="0.0" y="0.0" width="89.5" height="89.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="L4l-UP-NRP" secondAttribute="height" multiplier="1:1" id="6zu-0a-qXK"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="center" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="fFV-iw-hTu">
+                                                    <rect key="frame" x="99.5" y="19" width="275.5" height="51.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INn-Ws-0hd">
+                                                            <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="center" horizontalHuggingPriority="1" verticalHuggingPriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-na-fqg" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="20.5" width="155" height="31"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="size" keyPath="starSize">
+                                                                    <size key="value" width="31" height="31"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="starCount">
+                                                                    <integer key="value" value="5"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INn-Ws-0hd">
-                                            <rect key="frame" x="105" y="10" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="INn-Ws-0hd" firstAttribute="leading" secondItem="L4l-UP-NRP" secondAttribute="trailing" constant="15.5" id="BbK-9h-82z"/>
-                                        <constraint firstItem="L4l-UP-NRP" firstAttribute="leading" secondItem="uHe-FB-xmn" secondAttribute="leading" id="CMC-vr-V5r"/>
-                                        <constraint firstAttribute="bottom" secondItem="L4l-UP-NRP" secondAttribute="bottom" id="Kj1-Va-2Wq"/>
-                                        <constraint firstItem="L4l-UP-NRP" firstAttribute="top" secondItem="uHe-FB-xmn" secondAttribute="top" id="N7a-jJ-SrM"/>
-                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dfl-na-fqg" secondAttribute="trailing" constant="20" id="TcK-aT-JPb"/>
-                                        <constraint firstItem="INn-Ws-0hd" firstAttribute="top" secondItem="uHe-FB-xmn" secondAttribute="firstBaseline" constant="10" id="goS-Zp-Efv"/>
-                                        <constraint firstItem="dfl-na-fqg" firstAttribute="top" secondItem="INn-Ws-0hd" secondAttribute="bottom" constant="8" id="lYz-zT-ydj"/>
-                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="dfl-na-fqg" secondAttribute="bottom" constant="10.5" id="qO8-s5-d3p"/>
-                                        <constraint firstItem="dfl-na-fqg" firstAttribute="leading" secondItem="INn-Ws-0hd" secondAttribute="leading" id="uEw-T9-2Xu"/>
+                                        <constraint firstItem="Ejf-RP-vaD" firstAttribute="top" secondItem="uHe-FB-xmn" secondAttribute="top" id="58e-Bh-BVZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ejf-RP-vaD" secondAttribute="bottom" id="Q3O-bz-yBu"/>
+                                        <constraint firstItem="Ejf-RP-vaD" firstAttribute="leading" secondItem="uHe-FB-xmn" secondAttribute="leading" id="UqB-r2-V5b"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ejf-RP-vaD" secondAttribute="trailing" id="hyC-FK-kL3"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
